# Jira-ai-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-02-jira-cli-v1-foundation.md
docs/superpowers/specs/: 2026-05-01-jira-cli-design.md
jira_cli/cli/: exit_codes.py  main.py  output.py
jira_cli/cli/commands/: board.py  config_cmd.py  init.py  issue.py  issue_types.py  priority.py  project.py  sprint.py  user.py
jira_cli/config/: custom_fields.py  loader.py  models.py
jira_cli/jira_client/: endpoints.py  http.py
jira_cli/models/: errors.py  issues.py
jira_cli/services/: issues.py  lookup.py
tests/: conftest.py
tests/cli/: test_config_commands.py  test_error_envelope.py  test_init_commands.py  test_issue_commands.py  test_lookup_commands.py  test_main_smoke.py
tests/client/: test_http_errors.py
tests/config/: test_custom_fields.py  test_loader.py
tests/services/: test_issue_payloads.py  test_lookup_services.py
