[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jira-lite-cli"
version = "0.1.0"
description = "A lightweight JSON-first Jira CLI for script-friendly workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Jira CLI Contributors" }]
keywords = ["jira", "cli", "json", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Intended Audience :: Developers",
]
dependencies = ["typer>=0.12", "httpx>=0.27", "pydantic>=2.7"]

[project.scripts]
jira-cli = "jira_cli.cli.main:app"

[tool.setuptools]
include-package-data = false
